<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bookservice"
        android:title="@string/book_a_service"
        android:icon="@drawable/ic_build_black_24dp"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_person_black_24dp"
        />
    <item
        android:id="@+id/bookhistory"
        android:title="@string/booking_history"
        android:icon="@drawable/ic_history_black_24dp"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        />
    <item
        android:id="@+id/about"
        android:title="@string/about_factoryisupport"
        android:icon="@drawable/ic_info_black_24dp"
        />
    <item
        android:id="@+id/Contact"
        android:title="@string/contact_support"
        android:icon="@drawable/ic_mail_outline_black_24dp"
        />
    <item
        android:id="@+id/Logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        />
</menu>