<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gokulkrishnam.factoryissupport.SplashActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logoimageview" />

    <TextView
        android:id="@+id/logoname_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/imageView"
        android:text="@string/factory"
        android:textColor="#fff"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/logoname_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logoname_first"
        android:layout_alignBottom="@+id/logoname_first"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/support"
        android:textColor="#fff"
        android:textSize="36sp"
        android:textStyle="bold" />


</RelativeLayout>
